examples/test/testpolicy16175.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16175
  namespace: namespace323
spec:
  podSelector:
    matchLabels:
      key31: value39
      key26: value11
      key10: value33
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key40: value5
          key37: value6
      podSelector:
        matchLabels:
          key1: value29
          key34: value5
